; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_signature.c_git_signature_from_buffer.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_signature.c_git_signature_from_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_signature_from_buffer(i32** %0, i8* %1) #0 {
  %3 = alloca i32**, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store i32** %0, i32*** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i32**, i32*** %3, align 8
  %9 = icmp ne i32** %8, null
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i8*, i8** %4, align 8
  %12 = icmp ne i8* %11, null
  br label %13

13:                                               ; preds = %10, %2
  %14 = phi i1 [ false, %2 ], [ %12, %10 ]
  %15 = zext i1 %14 to i32
  %16 = call i32 @assert(i32 %15)
  %17 = load i32**, i32*** %3, align 8
  store i32* null, i32** %17, align 8
  %18 = call i32* @git__calloc(i32 1, i32 4)
  store i32* %18, i32** %5, align 8
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @GIT_ERROR_CHECK_ALLOC(i32* %19)
  %21 = load i8*, i8** %4, align 8
  %22 = load i8*, i8** %4, align 8
  %23 = call i32 @strlen(i8* %22)
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i8, i8* %21, i64 %24
  store i8* %25, i8** %6, align 8
  %26 = load i32*, i32** %5, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = call i32 @git_signature__parse(i32* %26, i8** %4, i8* %27, i32* null, i8 signext 0)
  store i32 %28, i32* %7, align 4
  %29 = load i32, i32* %7, align 4
  %30 = icmp ne i32 %29, 0
  br i1 %30, label %31, label %34

31:                                               ; preds = %13
  %32 = load i32*, i32** %5, align 8
  %33 = call i32 @git__free(i32* %32)
  br label %37

34:                                               ; preds = %13
  %35 = load i32*, i32** %5, align 8
  %36 = load i32**, i32*** %3, align 8
  store i32* %35, i32** %36, align 8
  br label %37

37:                                               ; preds = %34, %31
  %38 = load i32, i32* %7, align 4
  ret i32 %38
}

declare dso_local i32 @assert(i32) #1

declare dso_local i32* @git__calloc(i32, i32) #1

declare dso_local i32 @GIT_ERROR_CHECK_ALLOC(i32*) #1

declare dso_local i32 @strlen(i8*) #1

declare dso_local i32 @git_signature__parse(i32*, i8**, i8*, i32*, i8 signext) #1

declare dso_local i32 @git__free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
